k8s/lidarr/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr-service
  namespace: lidarr
spec:
  selector:
    app: lidarr
  ports:
    - protocol: TCP
      port: 8686
      targetPort: 8686
