k8s/lidarr/03-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr-ingressroute
  namespace: lidarr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`lidarr.localhost`)
      kind: Rule
      services:
        - name: lidarr-service
          port: 8686
